--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,5 @@
+/*Basic Theme Below (Header, Body and Footer)*/
+
 * {
 	margin: 0;
 	padding: 0;
@@ -13,6 +15,10 @@ a {
 	text-decoration: inherit;
 	font-size: 15px;
 	font-family: Calibri;
+}
+
+div a{
+	font-size: 20px;
 }
 
 footer {
@@ -31,48 +37,106 @@ footer {
 
 header {
 	background-color: #E71825;
-	height: auto;
+	height: 110px;
 	padding: 10px;
+	list-style-type: none;
+	margin: 0;
 }
 
-#menu ul {
-	list-style: none;
+header div{
+	float: left;
 }
 
-#menu ul li {
-	margin: auto;
+#navigation {
+	margin-top: 45px;
+    display: block;
+	position: absolute;
+	right: 0px;
+	padding-right: 50px;
+	padding-left: 50px;
+}
+
+#home, #services, #contactus {
 	background-color: #E71825;
-	width: 233px;
+	width: auto;
 	height: 20px;
 	line-height: 20px;
 	position: relative;
-	border: 1px solid #FFFFFF;
 	text-align: center;
-	font-size: 15px;
+	font-size: 20px;
 	color: #FFFFFF;
 	font-family: Calibri;
+	padding-left: 15px;
+	padding-right: 15px;
+	padding-top: 5px;
+	padding-bottom: 5px;
 }
 
-#menu ul li:hover {
+#menu ul, #aboutus ul {
+	list-style: none;
+}
+
+
+#menu ul li{
+	width: 240px;
+	background-color: #E71825;
+	height: 20px;
+	line-height: 20px;
+	position: relative;
+	text-align: center;
+	font-size: 20px;
+	color: #FFFFFF;
+	font-family: Calibri;
+	padding-top: 5px;
+	padding-bottom: 5px;
+}
+
+#aboutus ul li {
+	width: 120px;
+	background-color: #E71825;
+	height: 20px;
+	line-height: 20px;
+	position: relative;
+	text-align: center;
+	font-size: 20px;
+	color: #FFFFFF;
+	font-family: Calibri;
+	padding-top: 5px;
+	padding-bottom: 5px;
+}
+
+#menu ul li:hover, #aboutus ul li:hover {
 	background-color: #FFFFFF;
 	color: #000000;
 }
 
-#menu ul ul {
+#home:hover, #services:hover, #contactus:hover {
+	background-color: #FFFFFF;
+	color: #000000;
+}
+
+#menu ul ul, #aboutus ul ul {
 	display: none;
 }
 
 #menu ul li:hover>ul {
 	display: block;
-	margin-left: -1px;
+	margin-left: 0px;
 	text-decoration: none;
+	margin-top: 5px;
+}
+
+#aboutus ul li:hover>ul {
+	display: block;
+	margin-left: 0px;
+	text-decoration: none;
+	margin-top: 5px;
 }
 
 #logo {
 	display: block;
-	margin-left: auto;
-	margin-right: auto;
 	margin-bottom: 10px;
+	margin-left: 20px;
 	width: 225px;
 	height: 100px;
 	border-bottom: 5px solid #D4B8B8;
@@ -97,3 +161,6 @@ header {
 	flex-flow: row wrap;
 	justify-content: space-between;
 }
+/**************************************/
+
+/*Add fonts and other styles below*/
