--- a/css/style.css
+++ b/css/style.css
@@ -197,7 +197,7 @@ header div{
 }
 
 /* Clear floats after the columns */
-.row:after {
+.row_menu:after {
   content: "";
   display: table;
   clear: both;
@@ -207,6 +207,11 @@ header div{
 	width:100px;
 	height:100px;
 	object-fit:cover;
+}
+
+.pricetag{
+	font-size:20px;
+	font-weight:bold;
 }
 
 /*login.html*/
