--- a/css/style.css
+++ b/css/style.css
@@ -509,6 +509,9 @@ input[type=number]::-webkit-inner-spin-button, input[type=number]::-webkit-outer
 	text-align: center;
 }
 
+#profpic p a:hover {
+	color: #E71825;
+}
 
 #profcontainer {
 	width: 80%;
@@ -642,6 +645,79 @@ input[type=number]::-webkit-inner-spin-button, input[type=number]::-webkit-outer
 	color: #E71825;
 }
 
+/*Edit profile*/
+#editbody {
+	font-family:Calibri;
+	color:black;
+	background-color: #FFFFFF;
+	border: 1px solid #E71825;
+	height: auto;
+	margin-top: 20px;
+	margin-left: 20px;
+	margin-right: 20px;
+	margin-bottom: 20px;
+	padding: 5% 15%;
+}
+
+#editbody form input{
+	width:100%;
+	padding: 12px 20px;
+	margin: 8px 0;
+	box-sizing: border-box;
+	border: 2px solid #E71825;
+	border-radius: 4px;
+}
+
+#editbody form textarea{
+	width: 100%;
+	height: 150px;
+	padding: 12px 20px;
+	box-sizing: border-box;
+	border: 2px solid #E71825;
+	border-radius: 4px;
+	background-color: white;
+	font-size: 16px;
+	resize: none;
+	margin: 8px 0;
+}
+
+#editbody h2 {
+	font-size: 24px;
+	font-weight: bold;
+}
+
+#editbody form label{
+	font-size: 20px;
+}
+
+#editbody button {
+	float: right;
+	background-color: #FFFFFF;
+	border: 2px solid #E71825;
+	border-radius: 4px;
+	color: #E71825;
+	text-align: center;
+	font-size: 16px;
+	margin: 2% 0;
+	padding: 1% 2%;
+	transition-duration: 0.4s;
+	cursor: pointer;
+	width: 20%;
+	margin-left: 1%;
+}
+
+#editbody button:hover {
+	background-color: #E71825;
+	color: #FFFFFF;
+}
+
+#upload {
+	margin-left: 5%;
+}
+
+#upload:hover {
+	color: #E71825;
+}
 /*payment*/
 
 .row {
@@ -680,7 +756,7 @@ input[type=number]::-webkit-inner-spin-button, input[type=number]::-webkit-outer
   border-radius: 3px;
 }
 
-input[type=text] {
+.row input[type=text] {
   width: 100%;
   margin-bottom: 20px;
   padding: 12px;
@@ -688,7 +764,7 @@ input[type=text] {
   border-radius: 3px;
 }
 
-label {
+.row label {
   margin-bottom: 10px;
   display: block;
 }
