--- a/css/style.css
+++ b/css/style.css
@@ -372,7 +372,7 @@ header div{
 	box-sizing: border-box;
 }
 
-#loginbut, #submitbut {
+#loginbut, #signup {
 	background-color: #E71825;
 	color: white;
 	padding: 14px 20px;
@@ -386,8 +386,12 @@ header div{
 	opacity: 0.8;
 }
 
-#submitbut:hover {
+#signup:hover {
 	opacity: 0.8;
+}
+
+#signup a{
+	font-size: 15px;
 }
 
 #loginbox {
