--- a/css/style.css
+++ b/css/style.css
@@ -905,6 +905,22 @@ span.price {
 	color: white;
 }
 
+#processorderbody {
+	font-family:Calibri;
+	color:black;
+	background-color: #FFFFFF;
+	border: 1px solid #E71825;
+	height: auto;
+	margin-top: 20px;
+	margin-left: 20px;
+	margin-right: 20px;
+	margin-bottom: 20px;
+	padding: 5% 15%;
+	line-height: 30px;
+}
+
+/******/
+
 #selectionprice1, #selectionprice2, #selectionprice3, #selectionprice4, #selectionprice5, #selectionprice6 {
 	display: inline-block;
 }
